# ratgtex-pipeline

./: .gitignore  README.md  Snakefile  config.yaml  environment.yml  pyproject.toml  run_pipeline.sh  tissues.dup.txt
containers/: bioinfo.def  sratools.def  tensorqtl.def
ref/: sequence_report.tsv
scripts/setup/: init_check.py  prepare_refseq.py  setup_sra.py  setup_v4.sh
steps/: align.smk  download.smk  qc.smk  qtl.smk  setup.smk
