[project]
name = "ratgtex-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "snakemake>=9.23.1",
    "snakemake-executor-plugin-lsf",
]

[tool.uv.sources]
snakemake-executor-plugin-lsf = { git = "ssh://git@github.com/tgbrooks/snakemake-executor-plugin-lsf.git", rev = "3f792d70fd01f2a7eb45f23625e398b7dc0321e5" }
